Apr 21 2003  2.9.1  Added 'comment' field to the netxml and gpsxml files
Apr 15 2003  2.9.1  Tweaked some of the BSD packet-munging code, added another
                     warning about freebsd.
Apr 10 2003  2.9.1  Changed 'kismet' script to use install paths to components
Apr 08 2003  2.9.1  Fixed display grouping code again, now it doesn't kill 
                     groups not active this session.
                    Fixed stupid ring buffer problem which caused drones to
                     break on large transmission chunks
Apr 07 2003  2.9.1  Fixed README numberings
                    Un-broke majorly broken display grouping code.
                    Moved conf files to configure-generated to pick up prefixes
Apr 06 2003  2.9.1  Merged panelfront_display patch from Faust:
                     Tweaks to elapsed time display
                     Changed status panel scrolling
                     Changed text dump panel scrolling
                     Added percent-scrolled to scrolling panels
Apr 04 2003  2.9.1  Fixed silly error in drone tcpstreamer
Apr 03 2003  2.9.1  Revamped core timer logic to be MUCH more efficient,
                     especially with large numbers of timers.
                    Changed prism2_hostap monitor script AGAIN.
                    Fixed transmission of new clients to the panel ui
Apr 02 2003  2.9.1  Removed configure switch for acpi - now dynamically 
                     detected when the panelfront starts.
Apr 01 2003  2.9.1  Fixed airjack ssid alert to check for the right thing
Mar 30 2003  2.9.1  Updated configure to look for magick better, various other
                     configure tweaks.
                    Added alert for beacons for ssid 'airjack'
                    Restructured some of packetrackers alert handling to make
                     future code easier
                    Added ability to scroll panels ui columns left and right